add service auth
