# cmd/api/docs/swagger.json
@@ -56,6 +56,61 @@
                 "responses": {}
             }
         },
+        "/api/v1/auth/refresh": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Refresh",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth API"
+                ],
+                "summary": "Refresh",
+                "operationId": "AuthRefresh",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "AuthRefreshReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthRefreshReq"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/homepage/greeting": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "GetUserGreetings",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "HomePage API"
+                ],
+                "summary": "GetUserGreetings",
+                "operationId": "HomePageGetUserGreetings",
+                "responses": {}
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "security": [
@@ -78,11 +133,11 @@
                 "parameters": [
                     {
                         "description": "request body",
-                        "name": "LoginReq",
+                        "name": "AuthLoginReq",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginReq"
+                            "$ref": "#/definitions/models.AuthLoginReq"
                         }
                     }
                 ],
@@ -111,11 +166,11 @@
                 "parameters": [
                     {
                         "description": "request body",
-                        "name": "RegisterReq",
+                        "name": "AuthRegisterReq",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RegisterReq"
+                            "$ref": "#/definitions/models.AuthRegisterReq"
                         }
                     }
                 ],
@@ -124,25 +179,51 @@
         }
     },
     "definitions": {
-        "models.LoginReq": {
+        "models.AuthLoginReq": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 6,
+                    "minLength": 6,
+                    "example": "123456"
                 },
                 "username": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "example": "admin"
+                }
+            }
+        },
+        "models.AuthRefreshReq": {
+            "type": "object",
+            "properties": {
+                "refToken": {
                     "type": "string"
                 }
             }
         },
-        "models.RegisterReq": {
+        "models.AuthRegisterReq": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 6,
+                    "minLength": 6,
+                    "example": "123456"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100,
+                    "example": "admin"
                 }
             }
         }
